macros/tests/ui/no_query_handlers.rs
use gprogram_framework_macros::{gprogram, query_handlers};

#[gprogram]
mod gprogram {
    use super::*;

    query_handlers!();
}

fn main() {}
